spec/fixtures/test_suites/malformed/invalid_methods_defined/attack_and_target_ports.rb
class AttackAndTargetPorts < TestCaseTemplate
  @description = 'testcase for test'
  @requires = 'Individual'
  @protocol = 'test'
  @author = 'test'

  def attack
    nil
  end

  def target_ports
    nil
  end
end
